deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-monitor
  labels:
    app: system-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: system-monitor
  template:
    metadata:
      labels:
        app: system-monitor
    spec:
      containers:
        - name: system-monitor
          image: sumeshtilak/system-monitor:latest
          ports:
            - containerPort: 5000
