service.yaml
apiVersion: v1
kind: Service
metadata:
  name: system-monitor-service
spec:
  selector:
    app: system-monitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30007
  type: NodePort
