ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-monitor-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - project-go.online
    secretName: project-go-tls
  rules:
  - host: project-go.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: system-monitor-service
            port:
              number: 80
